# CV_homeworks

3d_cv/: 3d-cv-notebook.ipynb  README.md
Hand_key_points/: README.md  hand_point_detector.py  hand_points.py  main.py  unet_hand_key_point.ipynb
image_sim/: README.md  main.py  pyproject.toml
image_sim/metrics/: clustering_metrics.py  compare_images_metrics.py
image_sim/scripts/: detect_with_cnn.py  detect_with_hash_methods.py  detect_with_ssim_method.py
image_sim/utils/: measure_time.py  read_save_files.py
object-tracking-assignment/: README.md  creare_track.py  fastapi_server.py  index.html  requirements.txt  track_1.py  track_10.py  track_2.py  track_4.py  track_5.py  track_high.py  tracking_metrics.txt
yolov1/: README.MD  notebookd62acbe199 (5).ipynb
